<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="port"
        android:title="@string/pref_port_title"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:key="anonymous_access"
        android:title="@string/pref_anon_title"
        app:iconSpaceReserved="false"
        android:defaultValue="true" />

    <EditTextPreference
        android:key="user_id"
        android:title="@string/pref_user_title"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:key="password"
        android:title="@string/pref_password_title"
        app:iconSpaceReserved="false"
        android:summary="********" />

    <Preference
        android:key="root_folder"
        android:title="@string/pref_root_title"
        app:iconSpaceReserved="false"
        android:summary="@string/folder_not_selected" />

    <ListPreference
        android:key="theme_mode"
        android:title="@string/pref_theme_title"
        app:iconSpaceReserved="false"
        android:defaultValue="system"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:key="read_only_fileserver"
        android:title="@string/pref_read_only_title"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="allow_uploads"
        android:title="@string/pref_upload_title"
        app:iconSpaceReserved="false"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="allow_zip"
        android:title="@string/pref_zip_title"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_zip_summary"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="show_hidden"
        android:title="@string/pref_hidden_title"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <ListPreference
        android:key="max_speed"
        android:title="@string/pref_speed_title"
        app:iconSpaceReserved="false"
        android:defaultValue="off"
        android:entries="@array/speed_entries"
        android:entryValues="@array/speed_values"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="idle_timeout_minutes"
        android:title="@string/pref_idle_timeout_title"
        app:iconSpaceReserved="false"
        android:defaultValue="0"
        android:entries="@array/idle_timeout_entries"
        android:entryValues="@array/idle_timeout_values"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:key="drop_box_mode"
        android:title="@string/pref_drop_box_title"
        android:summary="@string/pref_drop_box_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/pref_about_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="version"
            android:title="@string/pref_version_title"
            android:selectable="false"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="licenses"
            android:title="@string/pref_licenses_title"
            android:summary="@string/pref_licenses_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
